bugfix, missed method name rename

--- a/resource/web/event_config.tmpl
+++ b/resource/web/event_config.tmpl
@@ -34,9 +34,9 @@
                                         data-id="{{.getId()}}"
                                         data-name="{{.getName()}}"
                                         data-type="{{.getType()}}"
-                                        {{#.getDeviceConfig().getConfiguration()}}
+                                        {{#.getDeviceConfigurator().getConfiguration()}}
                                         data-{{.getName()}}="{{.getString()}}"
-                                        {{/.getDeviceConfig().getConfiguration()}}
+                                        {{/.getDeviceConfigurator().getConfiguration()}}
                                         >
                                     <span class="glyphicon glyphicon-pencil"></span>
                                 </button>
@@ -71,9 +71,9 @@
                             <button type="button" class="btn btn-default btn-xs" data-toggle="modal"
                                     data-target="#eventModal"
                                     data-type="{{.getType()}}"
-                                    {{#.getDeviceConfig().getConfiguration()}}
+                                    {{#.getDeviceConfigurator().getConfiguration()}}
                                     data-{{.getName()}}="{{.getString()}}"
-                                    {{/.getDeviceConfig().getConfiguration()}}
+                                    {{/.getDeviceConfigurator().getConfiguration()}}
                                     >
                                 <span class="glyphicon glyphicon-plus"></span>
                             </button>
