AbstractDevice was not loading latest DeviceData at startup

--- a/resource/web/event_overview.tmpl
+++ b/resource/web/event_overview.tmpl
@@ -16,7 +16,7 @@
                 {{#events}}
                 <tr>
                     <td><a href="?id={{.getId()}}">{{.getName()}}</a></td>
-                    <td>{{.getDeviceData().getClass().getSimpleName()}}</td>
+                    <td>{{.getDeviceConfig().getClass().getSimpleName()}}</td>
                     <td>{{.getDeviceData()}}</td>
                     <td><span class="timestamp">{{.getDeviceData().getTimestamp()}}</span></td>
                     <td>
