--- a/resource/web/sensor_detail.tmpl
+++ b/resource/web/sensor_detail.tmpl
@@ -54,12 +54,12 @@
                     <th class="text-right">Owner:</th>
                     <td>{{sensor.getUser().getUsername()}} <p></td>
                 </tr>
-                {{#sensor.getDeviceConfig().getConfiguration()}}
+                {{#sensor.getDeviceConfigurator().getConfiguration()}}
                 <tr>
                     <th class="text-right">{{.getNiceName()}}:</th>
                     <td>{{.getString()}}</td>
                 </tr>
-                {{/sensor.getDeviceConfig().getConfiguration()}}
+                {{/sensor.getDeviceConfigurator().getConfiguration()}}
             </table>
         </div>
     </div>
