--- a/resource/web/map.tmpl
+++ b/resource/web/map.tmpl
@@ -131,7 +131,7 @@
     function drawLoop(){
         if (editModeEnabled == false)
             drawMap();
-        setTimeout("drawMap()", 10000);
+        setTimeout("drawLoop()", 10000);
     }
 
     function drawMap(){
