--- a/resource/web/main_index.tmpl
+++ b/resource/web/main_index.tmpl
@@ -11,7 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-switch.min.css" rel="stylesheet">
-    <link href="css/morris.css" rel="stylesheet">
+    <link href="css/c3.min.css" rel="stylesheet">
     <link href="css/hal.css" rel="stylesheet">
 
     <script src="js/jquery-1.11.3.min.js"></script>
@@ -20,8 +20,9 @@
     <script src="js/moment.js"></script>
     <script src="js/hal.js"></script>
 
-    <script src="js/raphael.min.js"></script>
-    <script src="js/morris.min.js"></script>
+    <!-- charts -->
+    <script src="js/d3.min.js"></script>
+    <script src="js/c3.js"></script>
 
 </head>
 
