--- a/resource/web/css/hal.css
+++ b/resource/web/css/hal.css
@@ -114,8 +114,11 @@ body {
 
 
 /*
- * Morris.js charts overrides
+ * c3.js charts overrides
  */
-.morris-hover {
-    position: initial;
+.c3 line, .c3 path {
+    stroke: #ccc;
+}
+.c3-line {
+    stroke-width: 2px;
 }
