--- a/resource/web/user_config.tmpl
+++ b/resource/web/user_config.tmpl
@@ -13,6 +13,12 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="email" class="col-sm-2 control-label">Email:</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email" name="email" value="{{user.getEmail()}}">
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="address" class="col-sm-2 control-label">Address:</label>
                     <div class="col-sm-10">
                         <textarea class="form-control" id="address" name="address">{{user.getAddress()}}</textarea>
