Added Gravatar avatar icons. issue 39

--- a/resource/web/user_config.tmpl
+++ b/resource/web/user_config.tmpl
@@ -6,6 +6,13 @@
         <div class="panel-body">
             <form class="form-horizontal" method="POST">
                 <input type="hidden" name="action" value="modify_local_user">
+
+                <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <img src="{{user.getLargeAvatarUrl()}}" />
+                </div>
+                    </div>
+
                 <div class="form-group">
                     <label for="username" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
