--- a/resource/web/main_index.tmpl
+++ b/resource/web/main_index.tmpl
@@ -76,8 +76,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <div align="center" style="font-size: 110px;height: 120px;">
-                                <span class="glyphicon glyphicon-user"></span>
+                            <div align="center">
+                                <img src="{{user.getAvatarUrl()}}" />
                             </div>
                         </li>
                         <li class="divider"></li>
